--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -344,8 +344,8 @@
                     </mat-panel-title>
                     <mat-panel-description>
                         <span style="font-size: 22px;font-weight: bold;">{{patient[0].PatientName}}</span>
-                        <mat-icon>account_circle</mat-icon>
-                        <!-- <mat-icon (click)="showNewReportButton(patient[0])">account_circle</mat-icon> -->
+                        <!-- <mat-icon>account_circle</mat-icon> -->
+                        <mat-icon (click)="showNewReportButton(patient[0])">account_circle</mat-icon>
                     </mat-panel-description>
                 </mat-expansion-panel-header>
 
