--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="loader" class="d-none">
     <mat-spinner value="50" diameter="30"></mat-spinner>
 </div>
-<app-header *ngIf="showHeaderAndFooter"></app-header>
+<app-new-header *ngIf="showHeaderAndFooter"></app-new-header>
 <router-outlet></router-outlet>
 <app-footer *ngIf="showHeaderAndFooter"></app-footer>
