--- a/src/app/consultations/consultations.component.html
+++ b/src/app/consultations/consultations.component.html
@@ -648,7 +648,7 @@
 למתן
 
                 </h6>
-                <div class="col-6">
+                <div class="col-12">
                     <google-chart
                         #departDoingTotalAll
                         [title]="titleDepartDoingTotalAll"
@@ -660,7 +660,7 @@
                     >
                     </google-chart>
                 </div>
-                <div class="col-6">
+                <div class="col-12">
                     <google-chart
                         #departDoingAvgAll
                         [title]="titleDepartDoingAvgAll"
@@ -751,7 +751,7 @@
 למתן
 
                 </h6>
-                <div class="col-6">
+                <div class="col-6 d-none">
                     <google-chart
                         #departRequestTotalAll
                         [title]="titleDepartRequestTotalAll"
@@ -763,7 +763,7 @@
                     >
                     </google-chart>
                 </div>
-                <div class="col-6">
+                <div class="col-12">
                     <google-chart
                         #departRequestAvgAll
                         [title]="titleDepartRequestAvgAll"
