--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -525,7 +525,7 @@
     <h1 mat-dialog-title style="text-align: center;">יישומים</h1>
     <hr>
     <mat-card class="card-img"
-        style="background-color: limegreen;width: 20%;" (click)="!onlyDisplay && openReinforcementtDialog('')">
+        style="background-color: limegreen;width: 100%;" (click)="!onlyDisplay && openReinforcementtDialog('')">
         <div class="card-img" style="background-image:url('../../assets/images/sos.png')"></div>
         <!-- <button matTooltipPosition="left" matTooltip="בקשה לתגבור" id="EventBtndisplay" mat-raised-button type="button"
             class="btn btn-raised mr-1" style="background-color: limegreen;"
@@ -535,10 +535,10 @@
             </span>
         </button> -->
     </mat-card>
-    <mat-card style="width: 20%;">Test 1</mat-card>
+    <!-- <mat-card style="width: 20%;">Test 1</mat-card>
     <mat-card style="width: 20%;">Test 2</mat-card>
     <mat-card style="width: 20%;">Test 3</mat-card>
-    <mat-card style="width: 20%;">Test 4</mat-card>
+    <mat-card style="width: 20%;">Test 4</mat-card> -->
     <!-- <div mat-dialog-actions>
         <div class="row">
             <button mat-raised-button color="primary" (click)="ipAddressUpdate()">עדכון</button>
