--- a/src/app/manage-clinic-price/manage-clinic-price.component.html
+++ b/src/app/manage-clinic-price/manage-clinic-price.component.html
@@ -1,5 +1,8 @@
 <div class="row" id="page-toshow">
     <div class="col" dir="rtl">
+        <button type="button" class="close" matTooltip="סגירה" aria-label="Close" (click)="closeModal()">
+            <span aria-hidden="true">&times;</span>
+        </button>
         <mat-vertical-stepper [linear]="isLinear" #stepper>
             <mat-step [stepControl]="detailsFormGroup">
                 <form [formGroup]="detailsFormGroup">
@@ -91,10 +94,10 @@
                         <mat-progress-bar mode="indeterminate" *ngIf="searchingProgress"></mat-progress-bar>
                     </div>
                     <div class="row" *ngIf="deptChosen">
-                        <div class="col text-right" style="height: 600px;">
+                        <div class="col text-right" style="height: 100%;">
                             <mat-form-field style="width: 47%;">
                                 <mat-label>סינון לפי תאור שירות</mat-label>
-                                <input matInput (keyup)="applyFilter($event)" placeholder="התחל הקלדה ..." #input>
+                                <input matInput (keyup)="applyFilter($event,'')" placeholder="התחל הקלדה ..." #input>
                             </mat-form-field>
                             <div class="amin">
                                 <mat-table [dataSource]="dataSource" class="mat-elevation-z8"
@@ -124,14 +127,8 @@
                                         <td mat-cell *matCellDef="let element" [formGroupName]="element.value">
                                             <mat-form-field class="text-center">
                                                 <mat-label>כמות</mat-label>
-                                                <span matPrefix class="material-icons" (click)="plusService($event,element.value)">
-                                                    keyboard_arrow_up
-                                                </span>
-                                                <input matInput placeholder="0" min="0"
+                                                <input matInput min="0" (change)="addSelectedServices(element)"
                                                     formControlName="ServiceQuantity" type="number">
-                                                <span matSuffix class="material-icons" (click)="minusService($event)">
-                                                    keyboard_arrow_down
-                                                </span>
                                             </mat-form-field>
                                         </td>
                                     </ng-container>
@@ -147,14 +144,16 @@
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="mb-3">
                         <mat-paginator [pageSize]="5" showFirstLastButtons></mat-paginator>
                         <button mat-raised-button matStepperPrevious>חזרה</button>
                         <button mat-raised-button matStepperNext>הבא</button>
                     </div>
-                    <div class="row">
-
-                    </div>
+                    <mat-chip-list aria-label="Dog selection">
+                        <mat-chip *ngFor="let service of displayArr.value" >
+                            <b (click)="applyFilter($event,service.ServiceName)">{{service.ServiceName}}</b>  -  "כמות":<b>{{service.ServiceQuantity}}</b>
+                        </mat-chip>
+                    </mat-chip-list>
                 </form>
 
             </mat-step>
