--- a/src/app/galit-points-report/galit-points-report.component.html
+++ b/src/app/galit-points-report/galit-points-report.component.html
@@ -73,12 +73,12 @@
           </ng-container>
           <ng-container matColumnDef="PatientFirstName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> שם פרטי </th>
-            <td mat-cell *matCellDef="let element"> {{element.PatientFirstName}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.PatientFirstName}} {{element.PatientLastName}}</td>
           </ng-container>
-          <ng-container matColumnDef="PatientLastName">
+          <!-- <ng-container matColumnDef="PatientLastName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> שם משפחה </th>
             <td mat-cell *matCellDef="let element"> {{element.PatientLastName}} </td>
-          </ng-container>
+          </ng-container> -->
           <ng-container matColumnDef="PM_PATIENT_GENDER">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> מגדר </th>
             <td mat-cell *matCellDef="let element"> {{element.PM_PATIENT_GENDER}} </td>
@@ -119,10 +119,10 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> דרך הזנה </th>
             <td mat-cell *matCellDef="let element"> {{element.ThroughInput}} </td>
           </ng-container>
-          <ng-container matColumnDef="Iv">
+          <!-- <ng-container matColumnDef="Iv">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> הזנה דרך וריד </th>
             <td mat-cell *matCellDef="let element"> {{element.Iv}} </td>
-          </ng-container>
+          </ng-container> -->
           <ng-container matColumnDef="HowToEat">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> דרך האכלה</th>
             <td mat-cell *matCellDef="let element"> {{element.HowToEat}} </td>
@@ -147,10 +147,10 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> MUST </th>
             <td mat-cell *matCellDef="let element"> {{element.MUST}} </td>
           </ng-container>
-          <ng-container matColumnDef="STAMP">
+          <!-- <ng-container matColumnDef="STAMP">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> STAMP </th>
             <td mat-cell *matCellDef="let element"> {{element.STAMP}} </td>
-          </ng-container>
+          </ng-container> -->
           <ng-container matColumnDef="WieghtLoss">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> ירידה במשקל </th>
             <td mat-cell *matCellDef="let element"> {{element.WieghtLoss}} </td>
