--- a/src/app/new-header/tree-item.component.html
+++ b/src/app/new-header/tree-item.component.html
@@ -1,10 +1,15 @@
 <li *ngFor="let link of data" class="nav-item">
     <a
-        *ngIf="link.Children.length == 0"
+        *ngIf="link.Children.length == 0 && link.LinkId.indexOf('http') == -1 "
         class="nav-link"
         [routerLink]="link.LinkId"
-        >{{ link.LinkDescription }}</a
-    >
+        >{{ link.LinkDescription }}</a>
+        <a
+        *ngIf="link.LinkId.indexOf('http') != -1 "
+        class="nav-link"
+        target="_blank"
+        [href]="link.LinkId"
+        >{{ link.LinkDescription }}</a>
     <span *ngIf="link.Children && link.Children.length > 0">
         <mat-accordion>
             <mat-expansion-panel>
