--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -378,9 +378,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" routerLink="emailsdashboard">דאשבורד פניות</a>
                             </li>
-                            <li class="nav-item" *ngIf="loginUserName == 'matias'">
+                            <!-- <li class="nav-item" *ngIf="loginUserName == 'matias'">
                                 <a class="nav-link" routerLink="publicinquiriescharts">גרפים</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </mat-expansion-panel>
                 </mat-accordion>
