--- a/src/app/nurses-dashboard/nurses-dashboard.component.css
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.css
@@ -3,6 +3,9 @@
   cursor: pointer;
   float: right;
 }
+.face-icon:hover{
+  cursor: pointer;
+}
 #speechBtn{
   border-radius: 50%;
   background-color: cornflowerblue;
