--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -154,6 +154,8 @@
 
     <div dir="rtl" class="row reportHeader" *ngIf="asDialog">
         <h5 class="ml-3">סה"כ מספר דיווחים: {{ELEMENT_DATA.length}}</h5>
+    </div>
+    <div dir="rtl" class="row reportHeader" *ngIf="asDialog">
         <h5>תפוסה סיעודית: {{nursingCount}}</h5>
     </div>
     <div dir="rtl" class="row reportHeader" *ngIf="asDialog">
