--- a/src/app/fill-report/add-response-fill.html
+++ b/src/app/fill-report/add-response-fill.html
@@ -10,5 +10,5 @@
     </mat-form-field>
 </form>
 <div mat-dialog-actions>
-    <button mat-raised-button color="primary" (click)="saveResponse()" mat-dialog-close [disabled]="reportResponse.invalid">שמירה</button>
+    <button mat-raised-button color="primary" (click)="chooseAction()" mat-dialog-close [disabled]="reportResponse.invalid">שמירה</button>
 </div>
